2022076062_Project2/Project2/y.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier identifier SEMI
    7                | type_specifier identifier LBRACE number RBRACE SEMI

    8 type_specifier: INT
    9               | VOID

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN compound_stmt

   11 params: param_list
   12       | VOID

   13 param_list: param_list COMMA param
   14           | param

   15 param: type_specifier identifier
   16      | type_specifier identifier LBRACE RBRACE

   17 compound_stmt: LCURLY local_declarations statement_list RCURLY

   18 local_declarations: local_declarations var_declaration
   19                   | empty

   20 statement_list: statement_list statement
   21               | empty

   22 statement: expression_stmt
   23          | compound_stmt
   24          | selection_stmt
   25          | iteration_stmt
   26          | return_stmt

   27 expression_stmt: expression SEMI
   28                | SEMI

   29 selection_stmt: IF LPAREN expression RPAREN statement
   30               | IF LPAREN expression RPAREN statement ELSE statement

   31 iteration_stmt: WHILE LPAREN expression RPAREN statement

   32 return_stmt: RETURN SEMI
   33            | RETURN expression SEMI

   34 expression: var ASSIGN expression
   35           | simple_expression

   36 var: identifier
   37    | identifier LBRACE expression RBRACE

   38 simple_expression: additive_expression LE additive_expression
   39                  | additive_expression LT additive_expression
   40                  | additive_expression GT additive_expression
   41                  | additive_expression GE additive_expression
   42                  | additive_expression EQ additive_expression
   43                  | additive_expression NE additive_expression
   44                  | additive_expression

   45 additive_expression: additive_expression PLUS term
   46                    | additive_expression MINUS term
   47                    | term

   48 term: term TIMES factor
   49     | term OVER factor
   50     | factor

   51 factor: LPAREN expression RPAREN
   52       | var
   53       | call
   54       | number

   55 call: identifier LPAREN args RPAREN

   56 args: arg_list
   57     | empty

   58 arg_list: arg_list COMMA expression
   59         | expression

   60 identifier: ID

   61 number: NUM

   62 empty: ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 29 30
    WHILE (259) 31
    RETURN (260) 32 33
    INT (261) 8
    VOID (262) 9 12
    ELSE (263) 30
    ID (264) 60
    NUM (265) 61
    ASSIGN (266) 34
    EQ (267) 42
    NE (268) 43
    LT (269) 39
    LE (270) 38
    GT (271) 40
    GE (272) 41
    LPAREN (273) 10 29 30 31 51 55
    RPAREN (274) 10 29 30 31 51 55
    LBRACE (275) 7 16 37
    RBRACE (276) 7 16 37
    LCURLY (277) 17
    RCURLY (278) 17
    SEMI (279) 6 7 27 28 32 33
    COMMA (280) 13 58
    ERROR (281)
    IFX (282)
    PLUS (283) 45
    MINUS (284) 46
    TIMES (285) 48
    OVER (286) 49


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    declaration_list (34)
        on left: 2 3
        on right: 1 2
    declaration (35)
        on left: 4 5
        on right: 2 3
    var_declaration (36)
        on left: 6 7
        on right: 4 18
    type_specifier (37)
        on left: 8 9
        on right: 6 7 10 15 16
    fun_declaration (38)
        on left: 10
        on right: 5
    params (39)
        on left: 11 12
        on right: 10
    param_list (40)
        on left: 13 14
        on right: 11 13
    param (41)
        on left: 15 16
        on right: 13 14
    compound_stmt (42)
        on left: 17
        on right: 10 23
    local_declarations (43)
        on left: 18 19
        on right: 17 18
    statement_list (44)
        on left: 20 21
        on right: 17 20
    statement (45)
        on left: 22 23 24 25 26
        on right: 20 29 30 31
    expression_stmt (46)
        on left: 27 28
        on right: 22
    selection_stmt (47)
        on left: 29 30
        on right: 24
    iteration_stmt (48)
        on left: 31
        on right: 25
    return_stmt (49)
        on left: 32 33
        on right: 26
    expression (50)
        on left: 34 35
        on right: 27 29 30 31 33 34 37 51 58 59
    var (51)
        on left: 36 37
        on right: 34 52
    simple_expression (52)
        on left: 38 39 40 41 42 43 44
        on right: 35
    additive_expression (53)
        on left: 45 46 47
        on right: 38 39 40 41 42 43 44 45 46
    term (54)
        on left: 48 49 50
        on right: 45 46 47 48 49
    factor (55)
        on left: 51 52 53 54
        on right: 48 49 50
    call (56)
        on left: 55
        on right: 53
    args (57)
        on left: 56 57
        on right: 55
    arg_list (58)
        on left: 58 59
        on right: 56 58
    identifier (59)
        on left: 60
        on right: 6 7 10 15 16 36 37 55
    number (60)
        on left: 61
        on right: 7 54
    empty (61)
        on left: 62
        on right: 19 21 57


State 0

    0 $accept: • program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

    8 type_specifier: INT •

    $default  reduce using rule 8 (type_specifier)


State 2

    9 type_specifier: VOID •

    $default  reduce using rule 9 (type_specifier)


State 3

    0 $accept: program • $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list •
    2 declaration_list: declaration_list • declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration •

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration •

    $default  reduce using rule 4 (declaration)


State 7

    6 var_declaration: type_specifier • identifier SEMI
    7                | type_specifier • identifier LBRACE number RBRACE SEMI
   10 fun_declaration: type_specifier • identifier LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    identifier  go to state 12


State 8

    5 declaration: fun_declaration •

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end •

    $default  accept


State 10

    2 declaration_list: declaration_list declaration •

    $default  reduce using rule 2 (declaration_list)


State 11

   60 identifier: ID •

    $default  reduce using rule 60 (identifier)


State 12

    6 var_declaration: type_specifier identifier • SEMI
    7                | type_specifier identifier • LBRACE number RBRACE SEMI
   10 fun_declaration: type_specifier identifier • LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 13
    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 13

   10 fun_declaration: type_specifier identifier LPAREN • params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


State 14

    7 var_declaration: type_specifier identifier LBRACE • number RBRACE SEMI

    NUM  shift, and go to state 21

    number  go to state 22


State 15

    6 var_declaration: type_specifier identifier SEMI •

    $default  reduce using rule 6 (var_declaration)


State 16

    9 type_specifier: VOID •
   12 params: VOID •

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (type_specifier)


State 17

   15 param: type_specifier • identifier
   16      | type_specifier • identifier LBRACE RBRACE

    ID  shift, and go to state 11

    identifier  go to state 23


State 18

   10 fun_declaration: type_specifier identifier LPAREN params • RPAREN compound_stmt

    RPAREN  shift, and go to state 24


State 19

   11 params: param_list •
   13 param_list: param_list • COMMA param

    COMMA  shift, and go to state 25

    $default  reduce using rule 11 (params)


State 20

   14 param_list: param •

    $default  reduce using rule 14 (param_list)


State 21

   61 number: NUM •

    $default  reduce using rule 61 (number)


State 22

    7 var_declaration: type_specifier identifier LBRACE number • RBRACE SEMI

    RBRACE  shift, and go to state 26


State 23

   15 param: type_specifier identifier •
   16      | type_specifier identifier • LBRACE RBRACE

    LBRACE  shift, and go to state 27

    $default  reduce using rule 15 (param)


State 24

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN • compound_stmt

    LCURLY  shift, and go to state 28

    compound_stmt  go to state 29


State 25

   13 param_list: param_list COMMA • param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 30


State 26

    7 var_declaration: type_specifier identifier LBRACE number RBRACE • SEMI

    SEMI  shift, and go to state 31


State 27

   16 param: type_specifier identifier LBRACE • RBRACE

    RBRACE  shift, and go to state 32


State 28

   17 compound_stmt: LCURLY • local_declarations statement_list RCURLY

    $default  reduce using rule 62 (empty)

    local_declarations  go to state 33
    empty               go to state 34


State 29

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN compound_stmt •

    $default  reduce using rule 10 (fun_declaration)


State 30

   13 param_list: param_list COMMA param •

    $default  reduce using rule 13 (param_list)


State 31

    7 var_declaration: type_specifier identifier LBRACE number RBRACE SEMI •

    $default  reduce using rule 7 (var_declaration)


State 32

   16 param: type_specifier identifier LBRACE RBRACE •

    $default  reduce using rule 16 (param)


State 33

   17 compound_stmt: LCURLY local_declarations • statement_list RCURLY
   18 local_declarations: local_declarations • var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 62 (empty)

    var_declaration  go to state 35
    type_specifier   go to state 36
    statement_list   go to state 37
    empty            go to state 38


State 34

   19 local_declarations: empty •

    $default  reduce using rule 19 (local_declarations)


State 35

   18 local_declarations: local_declarations var_declaration •

    $default  reduce using rule 18 (local_declarations)


State 36

    6 var_declaration: type_specifier • identifier SEMI
    7                | type_specifier • identifier LBRACE number RBRACE SEMI

    ID  shift, and go to state 11

    identifier  go to state 39


State 37

   17 compound_stmt: LCURLY local_declarations statement_list • RCURLY
   20 statement_list: statement_list • statement

    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43
    LCURLY  shift, and go to state 28
    RCURLY  shift, and go to state 44
    SEMI    shift, and go to state 45

    compound_stmt        go to state 46
    statement            go to state 47
    expression_stmt      go to state 48
    selection_stmt       go to state 49
    iteration_stmt       go to state 50
    return_stmt          go to state 51
    expression           go to state 52
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 38

   21 statement_list: empty •

    $default  reduce using rule 21 (statement_list)


State 39

    6 var_declaration: type_specifier identifier • SEMI
    7                | type_specifier identifier • LBRACE number RBRACE SEMI

    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 40

   29 selection_stmt: IF • LPAREN expression RPAREN statement
   30               | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 61


State 41

   31 iteration_stmt: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


State 42

   32 return_stmt: RETURN • SEMI
   33            | RETURN • expression SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43
    SEMI    shift, and go to state 63

    expression           go to state 64
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 43

   51 factor: LPAREN • expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 65
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 44

   17 compound_stmt: LCURLY local_declarations statement_list RCURLY •

    $default  reduce using rule 17 (compound_stmt)


State 45

   28 expression_stmt: SEMI •

    $default  reduce using rule 28 (expression_stmt)


State 46

   23 statement: compound_stmt •

    $default  reduce using rule 23 (statement)


State 47

   20 statement_list: statement_list statement •

    $default  reduce using rule 20 (statement_list)


State 48

   22 statement: expression_stmt •

    $default  reduce using rule 22 (statement)


State 49

   24 statement: selection_stmt •

    $default  reduce using rule 24 (statement)


State 50

   25 statement: iteration_stmt •

    $default  reduce using rule 25 (statement)


State 51

   26 statement: return_stmt •

    $default  reduce using rule 26 (statement)


State 52

   27 expression_stmt: expression • SEMI

    SEMI  shift, and go to state 66


State 53

   34 expression: var • ASSIGN expression
   52 factor: var •

    ASSIGN  shift, and go to state 67

    $default  reduce using rule 52 (factor)


State 54

   35 expression: simple_expression •

    $default  reduce using rule 35 (expression)


State 55

   38 simple_expression: additive_expression • LE additive_expression
   39                  | additive_expression • LT additive_expression
   40                  | additive_expression • GT additive_expression
   41                  | additive_expression • GE additive_expression
   42                  | additive_expression • EQ additive_expression
   43                  | additive_expression • NE additive_expression
   44                  | additive_expression •
   45 additive_expression: additive_expression • PLUS term
   46                    | additive_expression • MINUS term

    EQ     shift, and go to state 68
    NE     shift, and go to state 69
    LT     shift, and go to state 70
    LE     shift, and go to state 71
    GT     shift, and go to state 72
    GE     shift, and go to state 73
    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 44 (simple_expression)


State 56

   47 additive_expression: term •
   48 term: term • TIMES factor
   49     | term • OVER factor

    TIMES  shift, and go to state 76
    OVER   shift, and go to state 77

    $default  reduce using rule 47 (additive_expression)


State 57

   50 term: factor •

    $default  reduce using rule 50 (term)


State 58

   53 factor: call •

    $default  reduce using rule 53 (factor)


State 59

   36 var: identifier •
   37    | identifier • LBRACE expression RBRACE
   55 call: identifier • LPAREN args RPAREN

    LPAREN  shift, and go to state 78
    LBRACE  shift, and go to state 79

    $default  reduce using rule 36 (var)


State 60

   54 factor: number •

    $default  reduce using rule 54 (factor)


State 61

   29 selection_stmt: IF LPAREN • expression RPAREN statement
   30               | IF LPAREN • expression RPAREN statement ELSE statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 80
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 62

   31 iteration_stmt: WHILE LPAREN • expression RPAREN statement

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 81
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 63

   32 return_stmt: RETURN SEMI •

    $default  reduce using rule 32 (return_stmt)


State 64

   33 return_stmt: RETURN expression • SEMI

    SEMI  shift, and go to state 82


State 65

   51 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 83


State 66

   27 expression_stmt: expression SEMI •

    $default  reduce using rule 27 (expression_stmt)


State 67

   34 expression: var ASSIGN • expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 84
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 68

   42 simple_expression: additive_expression EQ • additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var                  go to state 85
    additive_expression  go to state 86
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 69

   43 simple_expression: additive_expression NE • additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var                  go to state 85
    additive_expression  go to state 87
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 70

   39 simple_expression: additive_expression LT • additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var                  go to state 85
    additive_expression  go to state 88
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 71

   38 simple_expression: additive_expression LE • additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var                  go to state 85
    additive_expression  go to state 89
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 72

   40 simple_expression: additive_expression GT • additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var                  go to state 85
    additive_expression  go to state 90
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 73

   41 simple_expression: additive_expression GE • additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var                  go to state 85
    additive_expression  go to state 91
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 74

   45 additive_expression: additive_expression PLUS • term

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var         go to state 85
    term        go to state 92
    factor      go to state 57
    call        go to state 58
    identifier  go to state 59
    number      go to state 60


State 75

   46 additive_expression: additive_expression MINUS • term

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var         go to state 85
    term        go to state 93
    factor      go to state 57
    call        go to state 58
    identifier  go to state 59
    number      go to state 60


State 76

   48 term: term TIMES • factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var         go to state 85
    factor      go to state 94
    call        go to state 58
    identifier  go to state 59
    number      go to state 60


State 77

   49 term: term OVER • factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    var         go to state 85
    factor      go to state 95
    call        go to state 58
    identifier  go to state 59
    number      go to state 60


State 78

   55 call: identifier LPAREN • args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    $default  reduce using rule 62 (empty)

    expression           go to state 96
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    args                 go to state 97
    arg_list             go to state 98
    identifier           go to state 59
    number               go to state 60
    empty                go to state 99


State 79

   37 var: identifier LBRACE • expression RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 43

    expression           go to state 100
    var                  go to state 53
    simple_expression    go to state 54
    additive_expression  go to state 55
    term                 go to state 56
    factor               go to state 57
    call                 go to state 58
    identifier           go to state 59
    number               go to state 60


State 80

   29 selection_stmt: IF LPAREN expression • RPAREN statement
   30               | IF LPAREN expression • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 101


State 81

   31 iteration_stmt: WHILE LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 102


State 82

   33 return_stmt: RETURN expression SEMI •

    $default  reduce using rule 33 (return_stmt)


State 83

   51 factor: LPAREN expression RPAREN •

    $default  reduce using rule 51 (factor)


State 84

   34 expression: var ASSIGN expression •

    $default  reduce using rule 34 (expression)


State 85

   52 factor: var •

    $default  reduce using rule 52 (factor)


State 86

   42 simple_expression: additive_expression EQ additive_expression •
   45 additive_expression: additive_expression • PLUS term
   46                    | additive_expression • MINUS term

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 42 (simple_expression)


State 87

   43 simple_expression: additive_expression NE additive_expression •
   45 additive_expression: additive_expression • PLUS term
   46                    | additive_expression • MINUS term

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 43 (simple_expression)


State 88

   39 simple_expression: additive_expression LT additive_expression •
   45 additive_expression: additive_expression • PLUS term
   46                    | additive_expression • MINUS term

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 39 (simple_expression)


State 89

   38 simple_expression: additive_expression LE additive_expression •
   45 additive_expression: additive_expression • PLUS term
   46                    | additive_expression • MINUS term

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 38 (simple_expression)


State 90

   40 simple_expression: additive_expression GT additive_expression •
   45 additive_expression: additive_expression • PLUS term
   46                    | additive_expression • MINUS term

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 40 (simple_expression)


State 91

   41 simple_expression: additive_expression GE additive_expression •
   45 additive_expression: additive_expression • PLUS term
   46                    | additive_expression • MINUS term

    PLUS   shift, and go to state 74
    MINUS  shift, and go to state 75

    $default  reduce using rule 41 (simple_expression)


State 92

   45 additive_expression: additive_expression PLUS term •
   48 term: term • TIMES factor
   49     | term • OVER factor

    TIMES  shift, and go to state 76
    OVER   shift, and go to state 77

    $default  reduce using rule 45 (additive_expression)


State 93

   46 additive_expression: additive_expression MINUS term •
   48 term: term • TIMES factor
   49     | term • OVER factor

    TIMES  shift, and go to state 76
    OVER   shift, and go to state 77

    $default  reduce using rule 46 (additive_expression)

